Archive2/b7/1fa786c29534fb/output
main.cpp:1:31: error: expected type-specifier before '...' token
 void method(int param) throw (...);
                               ^
